ecmascript/parser/tests/test262-error-references/fail/67419010fc81184a.js.stderr
error: Unexpected token `]`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/67419010fc81184a.js:2:4
  |
2 | */]
  |   ^

